# rust-web-server

./: .gitignore  Cargo.toml  README.md
src/: database.rs  main.rs  route.rs
src/route/: auth.rs  hello.rs  index.rs  users.rs
templates/: index.html
