[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix-rt = "2.6.0"
# actix-web = "3.3.3"
actix-web = "4.0.0-beta.3"
actix-rt = "2.6.0"
serde = {version = "1.0",features=["derive"]}
# actix-cors = "0.5.4"
actix-cors = "0.6.0-beta.4"
askama = "0.11.0"
thiserror = "1.0.30"
r2d2_mysql = "21.0.0"
# mysql = "22.0.0"
mysql = "21.0.0"
r2d2 = "0.8.9"
dotenv = "0.15.0"
